# esp32_gopro_controller

./: .gitignore  CHANGELOG.md  Kconfig.projbuild  README.md  SendUTCAndLogging.lua  camera_manager_design.md  dev.ps1  ota_design.md  partitions.csv  sdkconfig.defaults  updates.js  web_ui_spec.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  deploy-firmware-proxy.yml  release-beta.yml  release-dev.yml  release-promote.yml  release.yml
apps/main/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.defaults
apps/main/components/ble_core/: README.md  ble_connect.c  ble_scan.c
apps/main/components/ble_core/include/: ble_core.h
apps/main/components/camera_manager/: CMakeLists.txt  README.md  camera_manager.c  pair_attempt.c  reorder_validate.c
apps/main/components/camera_manager/include/: camera_manager.h  (+1 more)
apps/main/components/can_manager/: README.md  can_manager.c
apps/main/components/gopro/: gopro_model.c
apps/main/components/http_server/: CMakeLists.txt  api_cameras.c  api_logs.c  api_ota.c  api_settings.c  api_system.c  driver.c  http_server_internal.h
apps/main/components/log_ring/: CMakeLists.txt  log_ring.c
apps/main/components/shutdown_manager/: CMakeLists.txt
apps/main/main/: CMakeLists.txt  Kconfig.projbuild  main.c
apps/main/web_ui/: app.js  compress.py  index.html  style.css  updates.js
apps/recovery/: CMakeLists.txt  sdkconfig.defaults
apps/recovery/components/recovery_http/: recovery_http.c
apps/recovery/main/: CMakeLists.txt  Kconfig.projbuild  main.c  recovery.html
apps/wired/: CMakeLists.txt  sdkconfig.defaults
apps/wired/components/gopro_usb/: CMakeLists.txt  gopro_usb.c
apps/wired/components/gopro_usb/include/: gopro_usb.h
apps/wired/components/http_server_wired/: CMakeLists.txt  api_camera_wired.c  driver_wired.c
apps/wired/components/http_server_wired/include/: http_server_wired.h
apps/wired/components/usb_host_net/: CMakeLists.txt  usb_host_net.c
apps/wired/components/usb_host_net/include/: usb_host_net.h
apps/wired/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
apps/wired/web_ui/: app.js  style.css  updates.js
apps/wireless/: CMakeLists.txt  sdkconfig.defaults
apps/wireless/components/ble_core/: CMakeLists.txt  README.md  ble_connect.c  ble_core_internal.h  ble_gatt_write.c  ble_init.c  ble_scan.c
apps/wireless/components/camera_manager/: CMakeLists.txt  README.md  camera_manager.c  mismatch.c
apps/wireless/components/camera_manager/include/: camera_manager.h  camera_types.h
apps/wireless/components/camera_manager_wireless/: README.md  camera_manager.c
apps/wireless/components/gopro/: gopro_model.h
apps/wireless/components/gopro/gopro_wifi_rc/: CMakeLists.txt  README.md  command.c  diagnostic.c  gopro_wifi_rc_internal.h  status.c
apps/wireless/components/gopro/gopro_wifi_rc/include/: gopro_wifi_rc.h
apps/wireless/components/gopro/open_gopro_ble/: CMakeLists.txt  README.md  control.c  driver.c  gatt.c  open_gopro_ble_internal.h  pair_complete.c  query.c
apps/wireless/components/gopro/open_gopro_ble/include/: open_gopro_ble.h
apps/wireless/components/http_server/: CMakeLists.txt  api_ota.c  api_rc.c  api_shutdown.c  api_system.c  http_server_internal.h
apps/wireless/components/http_server/include/: http_server.h
apps/wireless/components/http_server_wireless/: CMakeLists.txt  api_cameras.c  api_rc.c  driver_wireless.c  idf_component.yml.old
apps/wireless/components/http_server_wireless/include/: http_server_wireless.h
apps/wireless/components/log_ring/: Kconfig
apps/wireless/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
components/cam_core/: CMakeLists.txt  cam_core.c
components/cam_core/include/: cam_core.h  camera_types.h
components/camera_manager/: README.md  camera_manager.c
components/camera_manager/include/: camera_manager.h
components/can_manager/: CMakeLists.txt  README.md  can_manager.c
components/can_manager/include/: can_manager.h
components/captive_dns/: CMakeLists.txt  captive_dns.c
components/captive_dns/include/: captive_dns.h
components/gopro/gopro_wifi_rc/: README.md  command.c  connection.c  driver.c  gopro_wifi_rc_internal.h  udp.c
components/gopro/gopro_wifi_rc/include/: gopro_wifi_rc.h  gopro_wifi_rc_spec.h
components/gopro/open_gopro_ble/: driver.c  open_gopro_ble_internal.h  pairing.c
components/gopro_model/: CMakeLists.txt  gopro_model.c
components/gopro_model/include/: gopro_model.h
components/http_server/: CMakeLists.txt  api_cameras.c  api_ota.c  api_system.c  driver.c  http_server_internal.h
components/http_server_core/: CMakeLists.txt  api_logs.c  api_ota.c  api_settings.c  api_shutdown.c  api_system.c  driver.c
components/http_server_core/include/: http_server_core.h  http_server_helpers.h
components/local_dns/: CMakeLists.txt  local_dns.c
components/local_dns/include/: local_dns.h
components/log_ring/: log_ring.c
components/log_ring/include/: log_ring.h
components/ota_io/: CMakeLists.txt  app_date_compare.c  boot_helpers.c  ota_io_priv.h  ota_settings.c  ota_writer.c  storage_writer.c
components/ota_io/include/: app_date_compare.h  ota_io.h
components/shutdown_manager/: CMakeLists.txt  shutdown_manager.c
components/shutdown_manager/include/: shutdown_manager.h
components/wifi_manager/: Kconfig.projbuild  README.md  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: architecture.md  development.md  hardware.md  http-api.md  multi-variant-restructure-plan.md  refactor-plan.md  releases.md  wired-variant-followup.md  wired-variant-migration-plan.md
docs/design/: camera-manager.md  can-id-configuration.md  log-capture.md  ota.md  shutdown.md  web-ui.md  wired-variant.md
main/: CMakeLists.txt  main.c
tests/host/: CMakeLists.txt  test_app_date_compare.c  test_gopro_model.c  test_mismatch.c  test_reorder_validate.c
tools/: flash_factory.ps1
tools/firmware-proxy/: launchpad.toml  wrangler.toml
tools/firmware-proxy/src/: index.js
tools/release/: make_factory_otadata.py  make_manifest.py
web_ui/: app.js  index.html  style.css
(+22 files in other folders)
