idf_component_register(
    SRCS
        "driver.c"
        "api_cameras.c"
        "api_rc.c"
        "api_settings.c"
        "api_system.c"
        "api_ota.c"
        "api_logs.c"
        "api_shutdown.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "${CMAKE_CURRENT_SOURCE_DIR}/../gopro"
    REQUIRES
        camera_manager
        can_manager
        wifi_manager
        open_gopro_ble
        gopro_wifi_rc
        ota_io
        log_ring
        shutdown_manager
        esp_http_server
        esp_app_format
        app_update
        esp_partition
        joltwallet__littlefs
        espressif__cjson
        lwip
        nvs_flash
        freertos
)
