idf_component_register(
    SRCS
        "driver.c"
        "connection.c"
        "command.c"
        "status.c"
        "udp.c"
        "settings.c"
        "diagnostic.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
    REQUIRES
        gopro_model
        camera_manager_wireless
        can_manager
        wifi_manager
        esp_timer
        freertos
        lwip
        esp_wifi
        esp_netif
)
